# cpp-create-macro

./: .gitignore  CMakeLists.txt  create.h  main.cpp
